# confidence-resolver-rust

./: .dockerfile-deps.json  .dockerignore  .gitignore  .release-please-manifest.json  BUILD.md  CLAUDE.md  CLAUDE.md.old  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  STICKY_ASSIGNMENTS.md  catalog-info.yaml  docker-compose.yml  new-provider-instructions.md  release-please-config.json  rust-toolchain.toml
confidence-cloudflare-resolver/: CHANGELOG.md  Cargo.toml  Makefile  wrangler.toml
confidence-cloudflare-resolver/deployer/: Dockerfile  README.md  script.sh
confidence-cloudflare-resolver/src/: flag_resolve.rs  lib.rs
confidence-cloudflare-resolver/tail/: wrangler.toml
confidence-cloudflare-resolver/tail/src/: index.js
confidence-resolver/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  build.rs
confidence-resolver/protos/confidence/api/: annotations.proto
confidence-resolver/protos/confidence/auth/v1/: auth.proto
confidence-resolver/protos/confidence/events/v1/: annotations.proto
confidence-resolver/protos/confidence/flags/admin/v1/: api.proto  resolver.proto  types.proto
confidence-resolver/protos/confidence/flags/admin/v1/events/: events.proto  events_internal.proto
confidence-resolver/protos/confidence/flags/resolver/v1/: api.proto  internal_api.proto  types.proto  wasm_api.proto
confidence-resolver/protos/confidence/flags/resolver/v1/events/: events.proto
confidence-resolver/protos/confidence/iam/v1/: api.proto  auth_api.proto  iam.proto
confidence-resolver/protos/confidence/iam/v1/events/: events.proto
confidence-resolver/protos/google/api/: httpbody.proto
confidence-resolver/src/: assign_logger.rs  err.rs  flag_logger.rs  gzip.rs  lib.rs  proto.rs  resolve_logger.rs  schema_util.rs  value.rs
confidence-resolver/test-payloads/: resolver_state.json
openfeature-provider/java/: .embedded-wasm-version  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  STICKY_RESOLVE.md  pom.xml
openfeature-provider/java/demo/: README.md  dependency-reduced-pom.xml  pom.xml
openfeature-provider/java/demo/src/main/java/com/spotify/confidence/demo/: Main.java
openfeature-provider/java/src/: lib.rs
openfeature-provider/java/src/main/filters/: confidence.properties
openfeature-provider/java/src/main/java/com/spotify/confidence/: AccountClient.java  AccountStateProvider.java  ApiSecret.java  AssignLogger.java  ChannelFactory.java  ConfidenceGrpcFlagResolver.java  DefaultChannelFactory.java  DefaultHttpClientFactory.java  Exceptions.java  FlagLogger.java  FlagResolverService.java  FlagsAdminStateFetcher.java  GrpcUtil.java  GrpcWasmFlagLogger.java  HttpClientFactory.java  LocalProviderConfig.java  LocalResolverServiceFactory.java  MaterializationNotSupportedException.java  MaterializationStore.java  NoOpWasmFlagLogger.java  OpenFeatureLocalResolveProvider.java  OpenFeatureTypeMapper.java  RemoteResolver.java  RemoteResolverFallback.java  ResolverApi.java  ResolverFallback.java  ResolverServiceFactory.java  SwapWasmResolverApi.java  ThreadLocalSwapWasmResolverApi.java  TokenHolder.java  UnsupportedMaterializationStore.java  Version.java  WasmFlagLogger.java  WasmFlagResolverService.java  WasmResolveApi.java
openfeature-provider/java/src/main/java/com/spotify/confidence/materialization/: BigTableMaterializationStore.java  InclusionKey.java  MaterializationKey.java  MaterializationReader.java  MaterializationStore.java  MaterializationWriter.java  ReadOp.java  ReadResult.java  VariantKey.java  WriteOp.java
openfeature-provider/java/src/main/proto/confidence/wasm/: messages.proto
openfeature-provider/java/src/test/java/com/spotify/confidence/: AssignLoggerTest.java  CapturingWasmFlagLogger.java  ChannelFactoryTest.java  GrpcWasmFlagLoggerTest.java  InMemoryMaterializationRepoExample.java  InMemoryMaterializationStoreExample.java  NoOpWasmFlagLogger.java  OpenFeatureLocalResolveProviderE2ETest.java  OpenFeatureLocalResolveProviderFlagLogsE2ETest.java  OpenFeatureLocalResolveProviderFlagLogsTest.java  OpenFeatureLocalResolveProviderIntegrationTest.java  OpenFeatureLocalResolveProviderTest.java  ResolveTest.java  TestAccountStateProvider.java  TestBase.java  WasmResolveTest.java
openfeature-provider/java/src/test/resources/: resolver_state_current.pb  simplelogger.properties
openfeature-provider/js/: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MAT_REPO_EXAMPLES.md  MIGRATION.md  Makefile  README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
openfeature-provider/js/bench/: Dockerfile  bench.mjs  package.json
openfeature-provider/js/demo/: README.md  index.ts
openfeature-provider/js/proto/: api.proto  messages.proto
openfeature-provider/js/src/: ConfidenceServerProviderLocal.e2e.test.ts  ConfidenceServerProviderLocal.flaglogs.e2e.test.ts  ConfidenceServerProviderLocal.flaglogs.test.ts  ConfidenceServerProviderLocal.test.ts  ConfidenceServerProviderLocal.ts  HashProvider.ts  LocalResolver.ts  MaterializationRepository.ts  WasmResolver.test.ts  WasmResolver.ts  defines.d.ts  env.ts  fetch.test.ts  fetch.ts  hash.ts  index.browser.ts  index.node.ts  lease.ts  logger.ts  materializationUtils.ts  test-helpers.ts  util.ts  version.ts  wasm.d.ts
openfeature-provider/python/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
openfeature-provider/python/confidence/: __init__.py  flag_logger.py  provider.py  state_fetcher.py  wasm_resolver.py
openfeature-provider/python/confidence/proto/: api.proto  test-only.proto
openfeature-provider/python/examples/: basic_usage.py
openfeature-provider/python/scripts/: generate_proto.py
openfeature-provider/python/tests/: __init__.py  e2e_test.py  integration_test.py
wasm-msg/: CHANGELOG.md  Cargo.toml  Makefile
wasm-msg/proto/: message.proto
wasm-msg/src/: lib.rs  memory.rs  message.rs  sync.rs  tls.rs
wasm/rust-guest/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  build.rs
wasm/rust-guest/proto/: types.proto
wasm/rust-guest/src/: lib.rs
(+211 files in other folders)
