[workspace]
resolver = "2"  # Use the new resolver for edition 2021

members = [
    "wasm-msg",
    "wasm/rust-guest",
    "confidence-resolver",
    "confidence-cloudflare-resolver",
    "openfeature-provider/java"
]
[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"