[package]
name = "confidence-cloudflare-resolver"
version = "0.1.0"
edition = "2021"
authors = []
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
confidence_resolver = { path = "../confidence-resolver" }
worker = { version="0.5.0", features=['http', 'axum', 'queue'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
log = "0.4.17"
bytes = "1.4.0"
base64 = "0.22.1"
once_cell = "1.19"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4.41"
isocountry = "0.3.2"