[package]
name = "confidence-cloudflare-resolver"
version = "0.2.8"
edition = "2021"
authors = []
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dependencies]
bytes = "1.10.1"
confidence_resolver = { path = "../confidence-resolver", version = "0.6.0" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
worker = { version= "0.6.1", features=['queue'] }
base64 = "0.22.1"
once_cell = "1.19"
serde = { version = "1.0.219" }
serde_json = "1.0.85"