[package]
name = "wasm-msg"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]  # Just use rlib for now, we can add cdylib when needed

[dependencies]
prost = { version = "0.12", default-features = false, features = ["derive"] }
paste = "1.0"

[package.metadata.cargo-machete]
ignored = ["tonic-build"]

[build-dependencies]
tonic-build = "0.13.1"

