[package]
name = "rust-guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # This is required for WASM

[dependencies]
wasm-msg = { path = "../../wasm-msg" }
confidence_resolver = { path = "../../confidence-resolver", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["alloc", "small_rng" ]}
prost = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
# TODO re-export Bytes
bytes = { version = "1.4.0", default-features = false }
wee_alloc = "0.4"
arc-swap = "1.7.1"

[build-dependencies]
prost-build = "0.12"



[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "prost-build"]