[package]
name = "rust-guest"
version = "0.1.9"
edition = "2021"

[lib]
name = "rust_guest"
crate-type = ["cdylib"]  # This is required for WASM

[dependencies]
wasm-msg = { path = "../../wasm-msg", version = "0.2.1" }
confidence_resolver = { path = "../../confidence-resolver", version = "0.6.0", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["alloc", "small_rng" ]}
prost = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
# TODO re-export Bytes
bytes = { version = "1.4.0", default-features = false }
arc-swap = "1.7.1"

[build-dependencies]
prost-build = "0.12"